--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "explore": "gridsome explore"
   },
   "dependencies": {
+    "@fullhuman/postcss-purgecss": "^1.3.0",
     "@gridsome/plugin-google-analytics": "^0.1.0",
     "@gridsome/plugin-sitemap": "^0.2.1",
     "@gridsome/remark-prismjs": "0.0.6",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
-    "style-resources-loader": "^1.2.1"
+    "style-resources-loader": "^1.2.1",
+    "tailwindcss": "^1.1.3"
   }
 }
