--- a/package.json
+++ b/package.json
@@ -7,22 +7,21 @@
     "explore": "gridsome explore"
   },
   "dependencies": {
-    "@fullhuman/postcss-purgecss": "^1.3.0",
     "@gridsome/plugin-google-analytics": "^0.1.0",
     "@gridsome/plugin-sitemap": "^0.2.1",
     "@gridsome/remark-prismjs": "0.0.6",
     "@gridsome/source-filesystem": "^0.6.0",
     "@gridsome/transformer-remark": "^0.3.4",
-    "gridsome": "^0.7.0",
+    "gridsome": "latest",
     "gridsome-plugin-algolia": "^2.1.1",
     "typeface-source-sans-pro": "^0.0.54",
     "vue-feather-icons": "^4.22.0",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
+    "gridsome-plugin-tailwindcss": "^2.2.26",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
-    "style-resources-loader": "^1.2.1",
-    "tailwindcss": "^1.1.3"
+    "style-resources-loader": "^1.2.1"
   }
 }
